<resources>
    <string name="app_name">Shift Planner</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test Person</string>
    <string name="nav_header_subtitle">Test.Person@hotmail.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    //Strings for Burger Menu
    <string name="menu_home">Calendar</string>
    <string name="menu_gallery">Feed</string>
    <string name="menu_slideshow">Statistics</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    // Strings for LoginActivity
    <string name="login_title">Shift Planner</string>
    <string name="login_button">Login</string>
    <string name="user_web_client_id" translatable="false">372150067505-olc0m1rgbfnercopba3deubk57s5seid.apps.googleusercontent.com</string>

    //TODO
    <string name="helper">fab_button</string>

    // String for Calendar
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    // String for Shift
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="day_name_text">Monday</string>
    <string name="day_date">20.09.21</string>
    <string name="day_time">10:00 - 18:00</string>

    // String for Statistic
    <string name="statistic_profile_name">Test User</string>
    <string name="statistic_hours_worked_last_month_title">Hours worked last Month:</string>
    <string name="statistic_hours_worked_last_month">45</string>
    <string name="statistic_marked_red">Test User</string>
    <string name="statistic_marked_green">Test User</string>

</resources>