<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/statisticProfileImageBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fui_ic_anonymous_white_24dp"
            app:srcCompat="@drawable/fui_ic_check_circle_black_128dp" />

        <TextView
            android:id="@+id/statisticProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistic_profile_name"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:background="#D5D5D5"
            android:src="@android:drawable/divider_horizontal_bright"
            app:srcCompat="@android:drawable/dark_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/statisticWeeklyHours"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/statistic_hours_worked_last_month_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statisticHoursWorkedLastMonthHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/statistic_hours_worked_last_month"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>